--- a/lmx.css
+++ b/lmx.css
@@ -6,9 +6,11 @@ body
 a {
 	color: blue;
 	text-decoration: none;
+	font-size: 15px;
 }
 
 pre
 {
 	font-size: 15px;
+	font-family: 'Helvetica Neue',Arial,'Liberation Sans',FreeSans,'Hiragino Sans GB',sans-serif;
 }
